# momentum-trading-algo

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  SES.py  algo.py  algo_momentum.py  algo_settings.cfg  database.py  docker-compose.yml  docker_entrypoint.sh  helper.py  ingest.py  invest.sh  log.py  models.py  pyproject.toml  requirements.txt
