[tool.poetry]
name = "momentum-trading-algo"
version = "0.1.0"
description = ""
authors = ["Moses McCall <mosesmc52@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alpaca-trade-api = "^3.2.0"
boto3 = "^1.34.125"
pandas = "^2.2.2"
sentry-sdk = "^2.5.1"
xtermcolor = "^1.3"
sqlalchemy = "1.3.19"
python-dotenv = "^1.0.1"
lxml = "^5.2.2"
scipy = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
