[tool.poetry]
name = "momentum-trading-algo"
version = "0.1.0"
description = ""
authors = ["Moses McCall <mosesmc52@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
boto3 = "^1.34.126"
sentry-sdk = "^2.5.1"
xtermcolor = "^1.3"
python-dotenv = "^1.0.1"
scipy = "^1.13.1"
alpaca-trade-api = "^3.2.0"
lxml = "^5.2.2"
sqlalchemy = "^2.0.41"
fredapi = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
